# voxize

./: .gitattributes  CLAUDE.md  README.md  WHISPER.txt  flake.nix  pyproject.toml  shell.nix
docs/: architecture-decision-layer-shell-and-dual-frontend.md  debugging-guide.md  design.md  journal.md
scripts/: generate_screenshots.py
src/voxize/: __main__.py  _trace.py  app.py  audio.py  batch.py  checks.py  cleanup.py  clipboard.py  config.py  ducking.py  lock.py  mock.py  mode_switcher.py  openai_patches.py  prompt.py  recover.py  state.py  storage.py  style.css  transcribe.py  ui.py
src/voxize/meeting/: __init__.py  __main__.py  app.py  capture.py  compress.py  process_app.py  process_ui.py  sessions.py  titling.py  transcribe.py  ui.py  welcome_app.py
