[project]
name = "voxize"
version = "0.1.0"
description = "Voice-to-text tool for Linux (Wayland/GNOME)"
requires-python = ">=3.11"
dependencies = [
    "PyGObject>=3.46",
    "sounddevice>=0.4",
    "websockets>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voxize"]
