[project]
name = "voxize"
version = "0.1.0"
description = "Voice-to-text tool for Linux (Wayland/GNOME)"
requires-python = ">=3.11"
dependencies = [
    "PyGObject>=3.46",
    "sounddevice>=0.4",
    "websockets>=13.0",
    "openai>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "black>=25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voxize"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501", # line length — enforced by Black
]

[tool.ruff.lint.isort]
known-first-party = ["voxize"]

[tool.black]
target-version = ["py311"]
line-length = 88
